{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 91,
  "lineage": "79df38d2-f95e-c323-0d6b-c294c3ffe08a",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa097a5c0d31430a",
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:instance/i-0cffa25b87b29e0ec",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cffa25b87b29e0ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05b5e6e65a39a5938",
            "private_dns": "ip-10-0-2-21.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-041223edd1f1f1ea2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0622c573f10350fe9",
            "tags": {
              "Name": "lab-jaeger-test-private"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0223448e8ecc863f4"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.lab_sg",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aa097a5c0d31430a",
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:instance/i-0f82ea9353449f13e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "lab-jaeger-test-instance-profile",
            "id": "i-0f82ea9353449f13e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ddd91dd5fef5ae70",
            "private_dns": "ip-10-0-3-242.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.242",
            "public_dns": "ec2-18-141-25-96.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.141.25.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0024ce20c30877ece",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001104aa0067efb19",
            "tags": {
              "Name": "lab-jaeger-test-public"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0223448e8ecc863f4"
            ]
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2_instance_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.sg.aws_security_group.lab_sg",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lab_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:loadbalancer/app/tf-lb-20240930084559046600000009/17419cf443b6d7eb",
            "arn_suffix": "app/tf-lb-20240930084559046600000009/17419cf443b6d7eb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240930084559046600000009-1437500653.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:loadbalancer/app/tf-lb-20240930084559046600000009/17419cf443b6d7eb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20240930084559046600000009",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0223448e8ecc863f4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-001104aa0067efb19"
              },
              {
                "subnet_id": "subnet-0097ae559663b75ed"
              }
            ],
            "subnets": [
              "subnet-001104aa0067efb19",
              "subnet-0097ae559663b75ed"
            ],
            "tags": {
              "Name": "lab-jaeger-test-lb"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-lb"
            },
            "vpc_id": "vpc-0b39cf13c18d14bac",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.sg.aws_security_group.lab_sg",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lab_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:listener/app/tf-lb-20240930084559046600000009/17419cf443b6d7eb/ed92d731b7de26d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:targetgroup/tf-20240930084547767600000002/35266d4bf7d8dd3c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:listener/app/tf-lb-20240930084559046600000009/17419cf443b6d7eb/ed92d731b7de26d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:loadbalancer/app/tf-lb-20240930084559046600000009/17419cf443b6d7eb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb.aws_lb.lab_lb",
            "module.lb.aws_lb_target_group.lab_tg",
            "module.sg.aws_security_group.lab_sg",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lab_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:targetgroup/tf-20240930084547767600000002/35266d4bf7d8dd3c",
            "arn_suffix": "targetgroup/tf-20240930084547767600000002/35266d4bf7d8dd3c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:targetgroup/tf-20240930084547767600000002/35266d4bf7d8dd3c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:325842618176:loadbalancer/app/tf-lb-20240930084559046600000009/17419cf443b6d7eb"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240930084547767600000002",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lab-jaeger-test-lb"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-lb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b39cf13c18d14bac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:security-group/sg-0223448e8ecc863f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0223448e8ecc863f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240930084547768700000003",
            "name_prefix": "terraform-",
            "owner_id": "325842618176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab-jaeger-test-sg"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b39cf13c18d14bac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lab_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0c8ab3f9cd7ec74",
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:elastic-ip/eipalloc-0f0c8ab3f9cd7ec74",
            "association_id": "eipassoc-086ae7bfafd3f9ca4",
            "domain": "vpc",
            "id": "eipalloc-0f0c8ab3f9cd7ec74",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-067a34f075418cd15",
            "private_dns": "ip-10-0-3-212.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.212",
            "public_dns": "ec2-13-228-35-225.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.35.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:internet-gateway/igw-0423831bc8cade8d6",
            "id": "igw-0423831bc8cade8d6",
            "owner_id": "325842618176",
            "tags": {
              "Name": "lab-jaeger-test-igw"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-igw"
            },
            "vpc_id": "vpc-0b39cf13c18d14bac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lab_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0c8ab3f9cd7ec74",
            "association_id": "eipassoc-086ae7bfafd3f9ca4",
            "connectivity_type": "public",
            "id": "nat-0aac963c88de7e95d",
            "network_interface_id": "eni-067a34f075418cd15",
            "private_ip": "10.0.3.212",
            "public_ip": "13.228.35.225",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-001104aa0067efb19",
            "tags": {
              "Name": "lab-jaeger-test-nat"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:route-table/rtb-0786b1832859737ac",
            "id": "rtb-0786b1832859737ac",
            "owner_id": "325842618176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0aac963c88de7e95d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-jaeger-test-private_route_table"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b39cf13c18d14bac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:route-table/rtb-00604b59b709de429",
            "id": "rtb-00604b59b709de429",
            "owner_id": "325842618176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0423831bc8cade8d6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab-jaeger-test-public_route_table"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b39cf13c18d14bac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab_igw",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c609fd63f23d00e0",
            "route_table_id": "rtb-0786b1832859737ac",
            "subnet_id": "subnet-0eb9de97ba74dae23"
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0077b2d5b7193692c",
            "route_table_id": "rtb-0786b1832859737ac",
            "subnet_id": "subnet-0622c573f10350fe9"
          },
          "dependencies": [
            "module.vpc.aws_eip.lab_nat_eip",
            "module.vpc.aws_nat_gateway.lab_nat",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7986564ff90cd23",
            "route_table_id": "rtb-00604b59b709de429",
            "subnet_id": "subnet-001104aa0067efb19"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bd0c5cb0ceff317",
            "route_table_id": "rtb-00604b59b709de429",
            "subnet_id": "subnet-0097ae559663b75ed"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-0eb9de97ba74dae23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb9de97ba74dae23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-jaeger-test-private_subnet_a"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-private_subnet_a"
            },
            "vpc_id": "vpc-0b39cf13c18d14bac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-0622c573f10350fe9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0622c573f10350fe9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-jaeger-test-private_subnet_b"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-private_subnet_b"
            },
            "vpc_id": "vpc-0b39cf13c18d14bac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-001104aa0067efb19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001104aa0067efb19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-jaeger-test-public_subnet_a"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-public_subnet_a"
            },
            "vpc_id": "vpc-0b39cf13c18d14bac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:subnet/subnet-0097ae559663b75ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0097ae559663b75ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "325842618176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab-jaeger-test-public_subnet_b"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-public_subnet_b"
            },
            "vpc_id": "vpc-0b39cf13c18d14bac"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:325842618176:vpc/vpc-0b39cf13c18d14bac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dbc72e86cd7ba2bf",
            "default_route_table_id": "rtb-047d2c2b0b8733e11",
            "default_security_group_id": "sg-027a4043b0372de2d",
            "dhcp_options_id": "dopt-02706d56e1ab7d416",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b39cf13c18d14bac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047d2c2b0b8733e11",
            "owner_id": "325842618176",
            "tags": {
              "Name": "lab-jaeger-test-vpc"
            },
            "tags_all": {
              "Name": "lab-jaeger-test-vpc"
            }
          }
        }
      ]
    }
  ]
}